# PolarModulationSSB

./: README.md
Si5351-Trimmed-Module-25-MHz-v2/: Adafruit Si5351A.kicad_pcb  Adafruit Si5351A.kicad_sch  README.md
Si5351-Trimmed-Module-25-MHz-v2/jlcpcb/: project.db
firmware_ssb/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.Fedora  Makefile  build.sh  docker-compose.yml  picoload.sh  ptt_tester.py  send_i2c_speed.py  send_tx.py
firmware_ssb/build-output/: usb_analog_microphone.uf2
firmware_ssb/simulate/: gen_hilbert.py  plot_fft.py  plot_sweep.py  run_audio_sim.sh  run_loopback.sh  run_sim.sh  simulate_audio.cpp  simulate_loopback.cpp  simulate_ssb.cpp  simulate_sweep.cpp
firmware_ssb/src/: Adafruit_NeoPixel.cpp  Adafruit_NeoPixel.h  Adafruit_NeoPixel.hpp  Arduino.h  CMakeLists.txt  Wire.h  arduino_compat.cpp  arduino_compat.h  audio_data.h  audio_data2.h  ddx_common.h  i2c.pio  main.cpp  pio_i2c.c  pio_i2c.h  polar_mod.cpp  polar_mod.h  si5351.cpp  si5351.h  speech_dsp.cpp  speech_dsp.h
hw-sims/: Buck-Approach-PM-SSB.asc  C2M0280120D.lib  LTC3411A.asc  QRO-Amp-2-FETs.cir  QRO-Amp-3-FETs.cir  QRO-Amp-Parallel-FETs-New-Transformer.cir  QRO-Amp-Parallel-FETs.cir  TPA3116D2.LIB  TPA3116D2.LIB.org  ThePolarExplorer.asc
